# advent-of-code-2021

./: README.md
golang/day1/: go.mod  main.go  main_test.go
golang/utils/: go.mod  utils.go
python/: Makefile  pyproject.toml
python/aoc2021/: day1.py  day2.py  day3.py  utils.py
python/tests/: test_day1.py  test_day2.py  test_day3.py  test_utils.py
python/tests/fixtures/utils/: ints.txt
