[tool.poetry]
name = "advent-of-code-2021"
version = "0.1.0"
description = ""
authors = ["davidjoliver86"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
black = "^21.11b1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[tool.black]
line-length = 120

[tool.pylint.'FORMAT']
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = "R0903"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
